Fix feature request github template

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-ame: Feature request
+name: Feature request
 description: Got a cool idea you would like to see implemented? Share it with us!
 labels: ["enhancement"]
 
