--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -36,7 +36,7 @@ body:
     id: system-info
     attributes:
       label: System info
-      description: Output of `pep695 info`.
+      description: Output of `autopep695 info`.
       render: shell
     validations:
       required: true
