--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.9,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "pep695"
+name = "autopep695"
 readme = "README.md"
 description = "Automatically upgrade to the new type syntax introduced in PEP 695 using a single command"
 requires-python = ">=3.9"
@@ -23,11 +23,11 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yowoda/pep695"
-Repository = "https://github.com/yowoda/pep695"
+Homepage = "https://github.com/yowoda/autopep695"
+Repository = "https://github.com/yowoda/autopep695"
 
 [project.scripts]
-pep695 = "pep695.cli:main"
+autopep695 = "autopep695.cli:main"
 
 [project.optional-dependencies]
 dev = ["nox==2024.4.15"]
@@ -37,9 +37,9 @@ dev = ["nox==2024.4.15"]
 "dev.slotscheck" = ["slotscheck>=0.19.0, <1"]
 
 [tool.flit.module]
-name = "pep695"
+name = "autopep695"
 
 
 [tool.pyright]
-include = ["pep695"]
+include = ["autopep695"]
 typeCheckingMode = "strict"
