--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ license = { file = "LICENSE" }
 dynamic = ["version"]
 dependencies = [
     "libcst>=1.4.0",
+    "colorama>=0.4.6, <1"
 ]
 
 [project.urls]
