--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,14 @@ dev = ["nox==2024.4.15"]
 [tool.flit.module]
 name = "autopep695"
 
+[tool.uv]
+dev-dependencies = [
+    "nox==2024.4.15",
+    "ruff>=0.6.3, <0.7",
+    "pyright==1.1.380",
+    "flit==3.9.0",
+    "slotscheck>=0.19.0, <1"
+]
 
 [tool.pyright]
 include = ["autopep695"]
