--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,3 +83,20 @@ jobs:
       - name: Run copyright check
         if: steps.filter.outputs.added == 'true'
         run: python scripts/copyright.py
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+
+    - name: Run tests
+      run: |
+        pip install nox
+        nox -s test
