--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = ["nox==2024.4.15"]
 "dev.typecheck" =  ["pyright==1.1.380"]
 "dev.release" = ["flit==3.9.0"]
 "dev.slotscheck" = ["slotscheck>=0.19.0, <1"]
+"dev.test" = ["pytest>=8.3.3, <9"]
 
 [tool.flit.module]
 name = "autopep695"
@@ -47,7 +48,8 @@ dev-dependencies = [
     "ruff>=0.6.3, <0.7",
     "pyright==1.1.380",
     "flit==3.9.0",
-    "slotscheck>=0.19.0, <1"
+    "slotscheck>=0.19.0, <1",
+    "pytest>=8.3.3, <9"
 ]
 
 [tool.pyright]
