--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,15 +88,16 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
 
-    - name: Checkout code
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Run tests
-      run: |
-        pip install nox
-        nox -s test
+      - name: Run tests
+        run: |
+          pip install nox
+          nox -s test
