--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = ["nox==2024.4.15"]
 "dev.release" = ["flit==3.9.0"]
 "dev.slotscheck" = ["slotscheck>=0.19.0, <1"]
 "dev.test" = ["pytest>=8.3.3, <9"]
+"dev.changelog" = ["towncrier==24.8.0"]
 
 [tool.flit.module]
 name = "autopep695"
@@ -49,9 +50,27 @@ dev-dependencies = [
     "pyright==1.1.381",
     "flit==3.9.0",
     "slotscheck>=0.19.0, <1",
-    "pytest>=8.3.3, <9"
+    "pytest>=8.3.3, <9",
+    "towncrier==24.8.0"
 ]
 
 [tool.pyright]
 include = ["autopep695"]
 typeCheckingMode = "strict"
+
+[tool.towncrier]
+directory = "changes"
+filename = "CHANGES.md"
+package = "autopep695"
+title_format = "v{version} ({project_date})"
+issue_format = "[#{issue}](https://github.com/yowoda/autopep695/issues/{issue})"
+orphan_prefix = "+"
+type = [
+    { directory = "breaking", name = "Breaking Changes", showcontent = true },
+    { directory = "removal", name = "Removals", showcontent = true },
+    { directory = "deprecation", name = "Deprecations", showcontent = true },
+    { directory = "feature", name = "Features", showcontent = true },
+    { directory = "bugfix", name = "Bugfixes", showcontent = true },
+    { directory = "doc", name = "Documentation", showcontent = true },
+    { directory = "misc", name = "Miscellaneous", showcontent = true },
+]
