--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Bump version, refresh changelog"
-          file_pattern: "autopep695/*.py"
+          commit_message: "release: bump version, refresh changelog"
+          file_pattern: "autopep695/*.py uv.lock"
 
       - name: Upload to PyPI
         env:
